<resources>
    <string name="app_name">Chat App</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_login">Login</string>
    <string name="send">Sign in to chat!</string>
    <string name="fill_fields">Please fill both fields above</string>
    <string name="register">Register</string>
    <string name="register_now">Register now!</string>
    <string name="click_to_log">Click here to Log in</string>
    <string name="or">-- OR --</string>
    <string name="log_in">Log In!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="write_message">"Write a message.."</string>

    <string name="guest">Sign In as Guest</string>
    <string name="text_view">TextView</string>
    <string name="text_guest">Let us know your Pseudo :</string>
    <string name="prompt_pseudo_guest">Pseudo</string>
    <string name="login_as_guest">Login as Guest</string>

    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_user_not_found">user not found!</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_side_menu">SIdeMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="change_pseudo">Change Your Pseudo</string>
    <string name="send_button_description">Send message</string>
    <string name="send_button_text">"Send!"</string>
    <string name="upload_button_description">Upload a picture</string>
    <string name="camera_button_description">Take a picture</string>
    <string name="gallery_button_description">Browse gallery</string>
    <string name="Image_description">Your Image goes here</string>
    <string name="change_password">Change Your Password</string>
    <string name="update_password">Update Your Password</string>
    <string name="profil_edit_hint">Enter Here New Password</string>




    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_home_page">UserHomePageActivity</string>
</resources>
